--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
         "@graphql-tools/merge": "^8.3.3",
         "@graphql-tools/schema": "^9.0.1",
         "apollo-server": "^3.10.1",
+        "apollo-server-core": "^3.10.1",
+        "apollo-server-express": "^3.10.1",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
