--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
         "@graphql-tools/merge": "8.3.12",
         "@graphql-tools/schema": "^9.0.1",
         "apollo-server": "^3.10.1",
+        "bcrypt": "^5.1.0",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-graphql": "^0.12.0",
         "graphql": "^14.7.0",
+        "jsonwebtoken": "^8.5.1",
         "merge-graphql-schemas": "^1.7.8",
         "mongo": "^0.1.0",
         "mongodb": "^4.8.1",
         "mongoose": "^6.5.2",
+        "mongoose-unique-validator": "^3.1.0",
         "nodemon": "^2.0.19",
         "pg": "^8.8.0",
         "pg-hstore": "^2.3.4",
