--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@graphql-tools/schema": "^9.0.1",
         "apollo-server": "^3.10.1",
         "bcrypt": "^5.1.0",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "crypto-js": "^4.1.1",
         "dotenv": "^16.0.1",
